--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,10 @@ body {
 }
 
 h1 {
-
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    flex-basis: 100%;
 }
 
 h2{
@@ -14,10 +17,21 @@ h2{
 
 .info-card {
     display: flex;
-    flex-flow: column nowrap;
+    flex-flow: row wrap;
     flex: 1 1 auto;
     
 }
+
+.card {
+    display: flex;
+    flex-flow: column wrap;
+    flex: 1 1 auto; 
+    background-color: rgba(255, 255, 255, 0.6);
+    max-width: 50%;
+    margin: 1em;
+    padding: .75em;
+}
+
 
 img {
     max-width: 300px;
